# kaggle-competitions

leash-belka/: .gitignore  README.md  pyproject.toml
leash-belka/experimental/: df_append.py
leash-belka/leash_BELKA/: DataIterator.py  TrainedModel.py  TrainingData.py  predict.py  train.py
leash-belka/scripts/: consolidate.py  generate-descriptors.py  split_train.sh
leash-belka/tests/: test_DataIterator.py  test_TrainingData.py  test_predict.py  test_train.py
